tests/snapshots/test_runner__tests__compiler__typecheck__enum_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Foo = Bar()

let a = Bar("hi")

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_5.kk:3:13
  │
3 │ let a = Bar("hi")
  │             ^^^^ Unexpected Payload
  │
  = This enum constructor does not require payload, consider removing this expression.
